  - No longer allow uploading any .php files.

AdminLog
  - New core module to replace the adminlog.php file

Search  - remember to bump version
  - FEATURE: Now exports a command for cmscli

AdminSearch v1.0.5
 - Rationalize the code a bit (remove un-necessary files).

DesignManager v1.1.6
 - Now properly handle renaming exported stylesheets and templates.

Navigator v1.0.9
 - Adds the title property to each node.

CmsJobManager v0.3
 - Now uses CURL initiate asynchronous requests

Version 2.2.6 - NO NAME SET
----------------------------------
Core - General
  - Fixes to AdminAlerts::load_by_name()

Search
  - Fix notice in PHP 7.1: A non well formed numeric value encountered...


Version 2.2.5 - Wawa
----------------------------------
Core - General
  - Fix minor security issue in the way login information was cached in cookies and the session.
  - Simplify rules around alias editing/generation in fillparams.
    If the alias field exists then we can adjust its value or recalculate an alias.
    Use basic properties, and ownership and permissions to determine if that field exists on the edit form.
  - Minor fixes to the CmsJobManager.


Version 2.2.4 - Little Paradise
----------------------------------
Core - General
  - Improvements to the Hook class.
  - Minor fix to usertagoperations.
  - Changes to the hierarchy selector to disallow circular references.
  - Fix problems with additional editors causing page aliases to be regenerated.
  - Minor fixes to Admin log browser.
  - Minor fixes to Admin login.
  - Add missing call Core::LoginPre hook.
  - Modify myaccount.php to call Core::EditUserPre hook BEFORE the password is set.
  - Fix documentation to CallUserTag.
  - Fix to default handling for content_image block.
  - Improve the help for the {page_attr} plugin.
  - Fix a potential warning in the {anchor} tag.
  - Fix boolean comparison in LoginOperations.

Installation Assistant v1.3.4
  - Fixes endless recursion issue with setting a tmpdir.